cloudformation.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  
  CommonSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable ports 22 and 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

  HAProxyEC2:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0dbc3d7bc646e8516
      SecurityGroups:
        - !Ref CommonSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum -y update
            yum -y install haproxy

  WebServerEC2Instance1:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0dbc3d7bc646e8516
      SecurityGroups:
        - !Ref CommonSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum -y install httpd

  WebServerEC2Instance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0dbc3d7bc646e8516
      SecurityGroups:
        - !Ref CommonSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum -y install httpd

  WebServerEC2Instance3:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0dbc3d7bc646e8516
      SecurityGroups:
        - !Ref CommonSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum -y install httpd
